--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -21,7 +21,7 @@
         	Projects
     	</a>
       </li>
-      <li class="nav-item {% if request.resolver_match.url_name == 'blog' %}active{% endif %}">
+      <li class="nav-item {% if request.resolver_match.url_name == 'blog' or request.resolver_match.url_name == 'blog_detail' %}active{% endif %}">
         <a class="nav-link" href="{% url 'blog' %}">
           <i class="fa fa-fw fa-feed"></i> 
           Blog
