add linebreaks to blog entries

--- a/core/templates/blog.html
+++ b/core/templates/blog.html
@@ -15,7 +15,7 @@
 		<strong>{{ object.title }}</strong>
 	</div>
 		<div class="card-body">
-		<p class="card-text">{{ object.entry }}</p>
+		<p class="card-text">{{ object.entry|linebreaks }}</p>
 			
 		</div>
 		<div class="card-footer text-muted">
