split blog into its own module

--- a/blog/templates/blogentry_list.html
+++ b/blog/templates/blogentry_list.html
@@ -16,7 +16,7 @@
 			
 		</div>
 		<div class="card-footer text-muted">
-			<a href="{% url 'blog_detail' pk=entry.pk %}" class="btn btn-dark">
+			<a href="{% url 'blog:blog_detail' pk=entry.pk %}" class="btn btn-dark">
     		Read More
     		<i class="fa fa-w fa-arrow-right"></i>
 		</a>
