--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -21,8 +21,8 @@
         	Projects
     	</a>
       </li>
-      <li class="nav-item {% if request.resolver_match.url_name == 'blog' or request.resolver_match.url_name == 'blog_detail' %}active{% endif %}">
-        <a class="nav-link" href="{% url 'blog' %}">
+      <li class="nav-item {% if request.resolver_match.namespace == 'blog' %}active{% endif %}">
+        <a class="nav-link" href="{% url 'blog:blog' %}">
           <i class="fa fa-fw fa-feed"></i> 
           Blog
       </a>
