--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -5,7 +5,7 @@
 
 {%block content%}
 	
-<a href="{% url 'blog' %}" class="btn btn-dark">
+<a href="{% url 'blog:blog' %}" class="btn btn-dark">
 	<i class="fa fa-w fa-arrow-left"></i>
 	Back
 </a>
