--- a/blog/templates/blogentry_list.html
+++ b/blog/templates/blogentry_list.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Projects{% endblock %}
+{% block title %}Blog{% endblock %}
 
 {%block content%}
 	
-<h1>Blog Entries</h1>
 {% for entry in object_list %}
 <div class="card w-100" style="margin-bottom: 2rem">
 	<div class="card-header">
