--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -15,8 +15,8 @@
         	<span class="sr-only">(current)</span>
         </a>
       </li>
-      <li class="nav-item {% if request.resolver_match.url_name == 'projects' %}active{% endif %}">
-        <a class="nav-link" href="{% url 'projects' %}">
+      <li class="nav-item {% if request.resolver_match.namespace == 'projects' %}active{% endif %}">
+        <a class="nav-link" href="{% url 'projects:projects' %}">
         	<i class="fa fa-fw fa-flask"></i> 
         	Projects
     	</a>
