make time better

--- a/projects/templates/projects.html
+++ b/projects/templates/projects.html
@@ -23,7 +23,7 @@
 	    			<i class="fa fa-w fa-github"></i>
 	    		GitHub
 	    		</a>
-	    		Last Updated: {{object.last_update}}
+	    		{{object.last_update}}
 	  		</div>
 		</div>
 	{% endfor %}
