--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -34,7 +34,7 @@
     	</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.linkedin.com/in/jeremy-childers-2270681a3/">
+        <a class="nav-link" href="https://www.linkedin.com/in/jeremy-childers-2270681a3/" target="_blank">
         	<i class="fa fa-fw fa-linkedin"></i> 
         	LinkedIn
     	</a>
