--- a/projects/templates/projects.html
+++ b/projects/templates/projects.html
@@ -5,27 +5,26 @@
 
 {%block content%}
 	
-	<div>
+<div class="row">
 	{% for object in object_list %}
-	{% if forloop.counter0|divisibleby:"3" %}
-	</div>
-	<div class="card-deck" style="padding-bottom: 2rem">
-	{% endif %}
-		<div class="card">
+	<div class="col-sm-12 col-md-6 col-lg-3 mb-4">
+		<div class="card h-100">
 			<div class="card-header">
 				<strong>{{object.title}}</strong>
 			</div>
-	  		<div class="card-body">
-	    		<p class="card-text">{{object.read_me}}</p>
-	  		</div>
-	  		<div class="card-footer text-muted">
-	  			<a href="{{object.url}}" target='_' class="btn btn-dark">
-	    			<i class="fa fa-w fa-github"></i>
-	    		GitHub
-	    		</a>
-	    		{{object.last_update}}
-	  		</div>
+			<div class="card-body">
+				<p class="card-text">{{object.read_me}}</p>
+			</div>
+			<div class="card-footer text-muted">
+				<a href="{{object.url}}" target='_' class="btn btn-dark">
+					<i class="fa fa-w fa-github"></i>
+					GitHub
+				</a>
+				{{object.last_update.date}}
+			</div>
 		</div>
+	</div>
 	{% endfor %}
-	
+</div>
+
 {% endblock %}
